--- a/index.html
+++ b/index.html
@@ -4,39 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>İstanbul 3D Harita</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        overflow: hidden;
-      }
-
-      #app {
-        width: 100vw;
-        height: 100vh;
-        position: fixed;
-        top: 0;
-        left: 0;
-      }
-
-      .district-label {
-        background-color: rgba(0, 0, 0, 0.7);
-        color: white;
-        padding: 4px 8px;
-        border-radius: 4px;
-        font-size: 14px;
-        font-family: Arial, sans-serif;
-        position: absolute;
-        pointer-events: none;
-        user-select: none;
-        z-index: 1000;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="app"></div>
